style.css
@import url('https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap');

* {
    box-sizing: border-box;
}

body {
    margin: 0;
    padding: 0;
    font-family: "Sora", sans-serif;
    font-optical-sizing: auto;
    font-style: normal;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

.card {
    background-color: #FFFFFF;
    border-radius: 16px;
    box-shadow: 0 10px 20px rgba(0,0,0,0.08);
    overflow: hidden;
    max-width: 350px;
    width: 90%;
}

.card img {
    width: 100%;
    height: auto;
    display: block;
}

.title {
    font-size: 18px;
    font-weight: 600;
}

.card-content {
    padding: 1rem 1.25rem;
    border-bottom: 1px solid #E5EAF0;
}

.tag {
    display: inline-block;
    background-color: #F2EAFD;
    color: #7C19EE;
    font-size: 0.625rem;
    padding: 0.25rem 0.75rem;
    border-radius: 9999px;
    font-weight: 700;
    margin-bottom: 0.75rem;
}

.body-text {
    font-size: 14px;
    font-weight: 200;
}

